# tec

./: README.md  setup.cfg
docsrc/: index.rst
tec/: __init__.py  dependencies.py  doctest_utils.py  findimports.py  import_counting.py  misc.py  modules.py  peek.py  pip_packaging.py  pip_requirements.py  pkg_code.py  snake_food_import_counting.py  stores.py  util.py
tec/examples/: manage_pth_file.py
tec/misc/: manage_pth_file.py
