[metadata]
name = tec
version = 0.0.12
url = https://github.com/thorwhalen/tec
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Tools to inspect python objects
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = tec

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	dol
	pandas
	cchardet

